# acto

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  Test.py  acto.py  acto_demo.py  acto_helm.py  acto_main.py  acto_timer.py  anvil-ae-full.sh  anvil-ae-one-controller.sh  anvil-ae-sampled.sh  anvil-ae.sh  bug_counter.py  bugs.md  cass-operator.py  check_result.py  checker.py  collect_number_of_ops.py  common.py  compare.py  config.yaml  config_post_diff_test.yaml  constant.py  cont_test.py  crawl_git_repos.py  data.json  deploy.py  endpoint.json  exception.py  flake.nix  get_dependency.py  get_matched_schemas.py  get_testcase_breakdown.py  input.py  k8s-operator-repos.md  k8s_helper.py  known_schemas.py  (+31 more)
acto/: __init__.py  __main__.py  acto.py  acto_config.py  common.py  compare.py  config.py  config_schema.py  constant.py  deploy.py  engine.py  engine_new.py  get_matched_schemas.py  oracle_handle.py  post_diff_test.py  reproduce.py  result.py  result_test.py  serialization.py  snapshot.py  trial.py
chactos/: __main__.py  cass-operator.json  fault_injection_config.py  fault_injections.py  fault_injector.py  mariadb-operator.json  minio-operator.json  percona-mongodb-operator.json  rabbitmq-operator.json  strimzi-kafka-operator-zk.json  strimzi-kafka-operator.json  tidb-operator.json  zookeeper-operator.json
classify/: classify_alarms.py
clickhouse-result/: test_plan.json  testrun_info.json
client/: kubectl.py  oracle_handle.py
custom/: compare.py
data/: df_10_commits_uptodate.csv  df_10_commits_uptodate_shuffled.csv  repos_v1.csv  repos_v1_shuffled.csv  repos_v2.csv  ssd.yaml  unique_repos_v2.csv
docs/: FAQ.md  cloudlab.md  development.md  environment_setup.md  port.md  resource.md  test_generator.md
error_log_post_analysis/: error_log_postprocess.py
error_log_util/: error_log_util.py
htmlcov/: class_index.html  d_00210e90531e1e5e_consistency_py.html  d_00210e90531e1e5e_crash_py.html  d_00210e90531e1e5e_health_py.html  d_00210e90531e1e5e_kubectl_cli_py.html  d_00210e90531e1e5e_operator_log_py.html  d_00210e90531e1e5e_state_compare_py.html  d_00210e90531e1e5e_state_condition_py.html  d_00210e90531e1e5e_state_py.html  d_00210e90531e1e5e_test_state_compare_py.html  d_106a0040fd9d84bf___init___py.html  d_106a0040fd9d84bf_kubectl_py.html  d_13a437a7fcee7332___init___py.html  d_13a437a7fcee7332___main___py.html  d_13a437a7fcee7332_acto_config_py.html  d_13a437a7fcee7332_common_py.html  d_13a437a7fcee7332_config_py.html  d_13a437a7fcee7332_config_schema_py.html  d_13a437a7fcee7332_constant_py.html  d_13a437a7fcee7332_deploy_py.html  d_13a437a7fcee7332_engine_py.html  d_13a437a7fcee7332_exception_py.html  d_13a437a7fcee7332_oracle_handle_py.html  d_13a437a7fcee7332_reproduce_py.html  d_13a437a7fcee7332_result_py.html  d_13a437a7fcee7332_result_test_py.html  d_13a437a7fcee7332_serialization_py.html  d_13a437a7fcee7332_snapshot_py.html  d_13a437a7fcee7332_trial_py.html  d_2f27b66bcdfaee9e___init___py.html  d_2f27b66bcdfaee9e_get_matched_schemas_py.html  d_2f27b66bcdfaee9e_input_py.html  d_2f27b66bcdfaee9e_k8s_schemas_py.html  d_2f27b66bcdfaee9e_kubernetes_property_py.html  d_2f27b66bcdfaee9e_property_attribute_py.html  d_2f27b66bcdfaee9e_testcase_py.html  d_2f27b66bcdfaee9e_testplan_py.html  d_2f27b66bcdfaee9e_value_with_schema_py.html  d_2f27b66bcdfaee9e_valuegenerator_py.html  d_349b66624af986cc_checker_py.html  (+236 more)
k8s_cluster/: base.py  k3d.py  kind.py  minikube.py
k8s_util/: __init__.py  k8sutil.py
known_schemas/: __init__.py  base.py  cronjob_schemas.py  deployment_schemas.py  known_schema.py  known_schemas.py  pod_disruption_budget_schemas.py  pod_schemas.py  resource_schemas.py  service_schemas.py  statefulset_schemas.py  storage_schemas.py
kubernetes_config/: K3D.yaml
monkey_patch/: patch.c  setup.py
parse_log/: __init__.py  parse_log.py
post_process/: post_diff_test.py  post_process.py  test_post_process.py
scripts/: README.md  amend_recovery_result.py  cl_bootstrap.sh  cloudlab_startup_run_by_creator.sh  cloudlab_startup_run_by_geniuser.sh  collect_json.py  collect_repo_info.py  collect_statistics.py  collect_time.py  count_config.py  crawl_examples.py  crawl_git_repos.py  difftest_to_csv.py  feature_results_to_csv.py  gen_config.py  gen_missing_examples.py  generation_results_to_csv.py  get_properties_in_misoperation.py  get_recovery.py  gpt_price_count.py  parse_inspection_result.py  parse_toml.py  parse_yaml.py  process_bugs_info.py  prune_tool.py  results_to_csv.py  run.sh  run_difftest.sh  runbatch_1.sh  runbatch_1_1.sh  runbatch_1_2.sh  runbatch_2.sh  runbatch_2_1.sh  runbatch_3.sh  runbatch_4.sh  runbatch_5.sh  runbatch_6.sh  runblackbox_sh  runchecker.sh  runchecker_blackbox.sh  (+5 more)
ssa/: .gitignore  Makefile  README.md  analysis.py  branches.csv  config.json  go.mod  go.sum  libanalysis.h  mapping.txt  out.txt  seed.txt  ssa.go  ssa.json  test.go  uses.csv
(+70311 files in other folders)
